Added the word break for post due to url links

--- a/themes/customized/assets/sass/custom.scss
+++ b/themes/customized/assets/sass/custom.scss
@@ -234,6 +234,7 @@ main {
 
 @media(max-width: 767px) {
     main .page-content,
+    main .post-content,
     #header-container {
         word-break: break-word;
     }
