--- a/themes/customized/layouts/links/list.html
+++ b/themes/customized/layouts/links/list.html
@@ -4,7 +4,7 @@
 
 {{ define "main" }}
 <div class="row">
-  <div class="col-xs-12 col-sm-12 instagram-content">
+  <div class="col-xs-12 col-sm-12 links-content">
     {{ range (where .Site.RegularPages "Type" "blog") }}
     <div>
       <a href="{{ .Permalink }}">
