--- a/themes/customized/assets/sass/links.scss
+++ b/themes/customized/assets/sass/links.scss
@@ -1,14 +1,14 @@
 @import 'variables';
 
 main {
-    .instagram-content {
+    .links-content {
         h2 {
             font-family: $font-family-special;
             font-size: $font-size-h1;
             text-align: center;
         }
     
-        img {
+        .post-thumb {
             margin-bottom: $spacing-xl;
         }
     }
