Only add the disclaimer for dutch blog posts

--- a/themes/customized/layouts/partials/blog.html
+++ b/themes/customized/layouts/partials/blog.html
@@ -4,7 +4,7 @@
 </script>
 
 <div class="row">
-  {{ if ne .Site.Language.Lang "en" }}
+  {{ if eq .Site.Language.Lang "nl" }}
   <div class="col-xs-12 col-sm-12">
     <div class="blog-disclaimer">
       {{ i18n "disclaimer_blog_posts" }}
